# NDA

./: .eslintrc.js  .gitignore  AGENTS.md  CHANGELOG_V2.md  CLAUDE.md  CMakeLists.txt  NDA-SPECS.md  QUICKSTART_WINDOWS.md  README.md  UI_V2_IMPLEMENTATION_COMPLETE.md  electron-builder.yml  package.json  pyproject.toml  requirements.txt  update.md
.claude/: settings.local.json
.github/workflows/: release.yml
cmake/: mingw-w64-toolchain.cmake
docs/: AIOC_plugin_plan.md  ARCHITECTURE_REPORT.md  DEPLOYMENT_COMPLETE.md  FINAL_DELIVERABLES.txt  MIGRATION_GUIDE.md  NDA-SPECS-v2.md  NDA-SPECS.md  PLATFORM_PACKAGES_READY.md  PYTHON_BRIDGE_OPTIMIZATION.md  PYTHON_PLUGINS_V2_AUDIT.md  PYTHON_PROCESSOR_GUIDE.md  README_V2.md  START_HERE.md  V2_COMPLETION_SUMMARY.md  V2_FINAL_IMPLEMENTATION_REPORT.md  update.md
docs/development/: aioc-plugin-implementation.md  linux-aioc-plugins-plan.md  linux-audio-plugins-plan.md  plugins.md  python-plugins.md
docs/guides/: README.md  installation.md  nda-beta-tester.md  standalone-windows.md  troubleshooting.md  use-cases.md
docs/guides/examples/: discord-voip-encryption.md  encrypted-aioc-radio.md
docs/plans/: PLAN_ENHANCEMENT_PROMPT.md
docs/plans/soundcard_plugin/: SOUNDCARD_CROSS_OS_PYTHON_PLUGINS_PROMPT.md
docs/reports/: AIOC_V2.2_IMPLEMENTATION.md  BUG_FIXES_SUMMARY.md  CHANGELOG_V2.1.md  CRYPTO_HANDLER_COMPLETE.md  CRYPTO_HANDLER_IMPLEMENTATION.md  DEPLOYMENT_COMPLETE.md  DOCUMENTATION_AUDIT_REPORT.md  DOCUMENTATION_UPDATE_SUMMARY.md  INVESTIGATION_ROADMAP.md  PERFORMANCE_ANALYSIS_V2.1.md  PLATFORM_PACKAGES_READY.md  PYTHON_OPTIMIZATION_COMPLETE.md  PYTHON_PLUGINS_V2_GAPS.md  V2.1_DOCUMENTATION_INDEX.md  V2.1_EXECUTIVE_SUMMARY.md  V2_COMPLETION_IMPLEMENTATION.md  V2_IMPLEMENTATION_STATUS.md  V2_STRATEGIC_SUMMARY.md  WASAPI_BACKPRESSURE_FIX.md  WASAPI_BUFFER_PRIMING_FIX.md  WASAPI_RING_BUFFER_IMPLEMENTATION_PLAN.md  WASAPI_RING_BUFFER_TASK.md  WINDOWS_PACKAGING_COMPLETE.md  agent-planner-enhancement-prompt.md  ai-documentation-index.md  audio_pipeline_audit.md  independent-pipeline-buttons.md  legacy-v1-specs.md  python-plugins-inventory.md  python-plugins-v2-audit-summary.md  python-v2-audit-visual.md  v2-implementation-report.md
docs/strategy/: decisions.md  one-week-release.md  roadmap.md
docs/technical/: ARCHITECTURE.md  aioc-firmware-software-guide.md  aioc-io-ptt-spec.md  plugin-discovery.md  python-bridge-complete-guide.md  specifications.md
examples/: AES256EncryptorPlugin.h  MicrophoneSourcePlugin.h  UDPBearerPlugin.h  python_plugin_example.cpp
include/audio/: AudioEngine.h  PulseDeviceEnum.h  Resampler.h  RingBuffer.h  WasapiDeviceEnum.h
include/core/: ProcessingPipeline.h
include/crypto/: CryptoManager.h  Encryptor.h
include/plugins/: AudioProcessorPlugin.h  AudioSinkPlugin.h  AudioSourcePlugin.h  BasePlugin.h  BearerPlugin.h  EncryptorPlugin.h  PluginManager.h  PluginPaths.h  PluginTypes.h  PythonPluginBridge.h
include/ui/: AboutDialog.h  Dashboard.h  EncryptionView.h  ExportKeysDialog.h  ImportKeysDialog.h  MainWindow.h  PipelineView.h  PluginSidebar.h  PluginsView.h  SettingsView.h  UnifiedPipelineView.h
plugins_py/: QUICKSTART.md  README.md  __init__.py  base_plugin.py  cython_compiler.py  null_sink.py  plugin_loader.py  pulseaudio_microphone.py  pulseaudio_speaker.py  requirements.txt  setup_linux.sh  setup_windows.bat  sine_wave_source.py  soundcard_microphone.py  soundcard_speaker.py  sounddevice_microphone.py  sounddevice_speaker.py  test_plugins.py  wav_file_sink.py
plugins_py/examples/: fernet_decryptor.py  fernet_encryptor.py  passthrough.py  simple_gain.py
plugins_py/nda_py_utils/: __init__.py  audio_ring_buffer.py
plugins_src/: AIOCPluginCommon.cpp  AIOCPluginCommon.h  AIOCSinkPlugin.cpp  AIOCSourcePlugin.cpp  AlsaMicrophonePlugin.cpp  LinuxMicrophonePlugin.cpp  LinuxSpeakerPlugin.cpp  NullSinkPlugin.cpp  SineWaveSourcePlugin.cpp  WavFileSinkPlugin.cpp  WindowsMicrophoneSourcePlugin.cpp  WindowsSpeakerSinkPlugin.cpp
plugins_src/bridge/: PipeBridgeSession.cpp  PipeBridgeSession.h  PipeBridgeSink.cpp  PipeBridgeSink.h  PipeBridgeSource.cpp  PipeBridgeSource.h
plugins_src/examples/: AES256DecryptorPlugin.cpp  AES256EncryptorPlugin.cpp  CMakeLists.txt
plugins_src/linux/: LinuxAIOCSession.cpp  LinuxAIOCSession.h  LinuxAIOCSinkPlugin.cpp  LinuxAIOCSinkPlugin.h  LinuxAIOCSourcePlugin.cpp  LinuxAIOCSourcePlugin.h  PulseAudioSink.cpp  PulseAudioSink.h  PulseAudioSource.cpp  PulseAudioSource.h
plugins_src/nade/: NadeDecryptorPlugin.cpp  NadeDecryptorPlugin.h  NadeEncryptorPlugin.cpp  NadeEncryptorPlugin.h  NadeExternalIO.cpp  NadeExternalIO.h  NadeTextSinkPlugin.cpp  NadeTextSinkPlugin.h  NadeTextSourcePlugin.cpp  NadeTextSourcePlugin.h  TextEncoding.h
scripts/: 99-aioc.rules  README.md  build_ubuntu.sh  build_windows.bat  build_windows_dev.bat  build_windows_ninja.bat  create_platform_packages.py  deploy.py  deploy_windows.bat  dev_ubuntu.sh  setup_venv_windows.bat  setup_windows.bat
scripts/windows-packaging/: README.md  build_config.json  build_config.json.template  build_release_package.bat  bundle_python.py  collect_dependencies.py  deploy_standalone.py  setup_build_config.bat  verify_package.py
src/: main.cpp  preload.js
src/audio/: AudioDevice.cpp  AudioEngine.cpp  PulseDeviceEnum.cpp  PulseDeviceEnumStub.cpp  Resampler.cpp  WasapiDeviceEnum.cpp
src/core/: ProcessingPipeline.cpp
src/crypto/: CryptoManager.cpp
src/main/: index.js  pluginManager.js  windowsAudioEngine.js
src/native/: binding.gyp
src/plugins/: PluginManager.cpp  PluginPaths.cpp  PythonPluginBridge.cpp
src/plugins/inputs/: WASAPIInput.js
src/plugins/outputs/: WASAPIOutput.js
src/plugins/processors/: NADEProcessor.js
src/renderer/: index.html
src/renderer/js/: renderer.js
src/ui/: AboutDialog.cpp  AudioDevicesView.cpp  Dashboard.cpp  EncryptionView.cpp  ExportKeysDialog.cpp  ImportKeysDialog.cpp  MainWindow.cpp  PipelineView.cpp  PluginSidebar.cpp  PluginsView.cpp  UnifiedPipelineView.cpp
tests/: benchmark_python_bridge.cpp  test_resampler_quality.cpp  test_ring_buffer.cpp
(+1 files in other folders)
